--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "endroid/qr-code-bundle": "^4.0",
         "mercuryseries/flashy": "^1.0",
         "mercuryseries/flashy-bundle": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.2",
